@@ -1,0 +1,6 @@
+{
+    "LayoutName": "SeasonProgressQualificationPositions",
+    "RenderType": "DriverStandings",
+	"RenderCaption": "driver season progress (Qualification positions)",
+	"Index" : 3
+}
